<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.detail.ContentDetailActivity">

    <LinearLayout
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_back" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContentDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivFilm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/dummy_movie"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:elevation="15dp"
                android:translationY="-30dp"
                app:cardBackgroundColor="@color/secondary"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:contentPadding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/ivFilm"
                tools:layout_editor_absoluteX="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Boyo Miber"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1 January 2021"
                            android:textColor="@color/secondTextColor"
                            android:textSize="11sp" />

                        <ImageView
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_width="5dp"
                            android:layout_height="5dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_circle"/>

                        <TextView
                            android:id="@+id/txtTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="107min"
                            android:textColor="@color/secondTextColor"
                            android:textSize="11sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txtRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="7.5"
                            android:textColor="@color/ratingColor"
                            android:textSize="17sp" />

                        <RatingBar
                            android:id="@+id/movieRating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:numStars="5"
                            android:progressTint="@color/ratingColor"
                            android:rating="3"
                            android:theme="@style/RatingBar" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/lorem"
                        android:textColor="@color/secondTextColor"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:translationY="-10dp"
                android:elevation="15dp"
                app:cardBackgroundColor="@color/secondary"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:contentPadding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTitleDir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="Director"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvDirector"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>