<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMovie"
            android:layout_width="match_parent"
            android:nestedScrollingEnabled="false"
            android:layout_marginBottom="15dp"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_movie">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>